--- a/Team_Game.vcxproj.filters
+++ b/Team_Game.vcxproj.filters
@@ -1,303 +1,291 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="ソース ファイル">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="ヘッダー ファイル">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="camera.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="debugproc.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="input.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="light.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="manager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="object.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="object2D.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="object3D.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="objectbillboard.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="objectX.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="pch.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="renderer.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="sound.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="texturemanager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="modelmanager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="character.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="motion.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="model.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="player.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="playermanager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="pause.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="pausemanager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="scene.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="title.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="titleLogo.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="titlemanager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="titlemenu.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="fade.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="game.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="navi.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="uplift.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="arrow.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="objectpool.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="naviUi.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース</Filter>
     </ClCompile>
     <ClCompile Include="block.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース</Filter>
     </ClCompile>
-    <ClCompile Include="tutorial.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="camera.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="character.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="debugproc.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="fade.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="game.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="input.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="item.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="light.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="manager.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="model.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="modelmanager.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="motion.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="navi.cpp">
+      <Filter>ソース</Filter>
     </ClCompile>
     <ClCompile Include="naviMarker.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="naviUi.cpp">
+      <Filter>ソース</Filter>
     </ClCompile>
     <ClCompile Include="number.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース</Filter>
     </ClCompile>
-    <ClCompile Include="timer.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="object.cpp">
+      <Filter>ソース</Filter>
     </ClCompile>
-<<<<<<< HEAD
-    <ClCompile Include="item.cpp">
-=======
-    <ClCompile Include="result.cpp">
->>>>>>> b9884d234e9e679b8dde4650ac453e987f466e87
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="object2D.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="object3D.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="objectbillboard.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="objectpool.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="objectX.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="pause.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="pausemanager.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="player.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="playermanager.cpp">
+      <Filter>ソース</Filter>
     </ClCompile>
     <ClCompile Include="ranking.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース</Filter>
     </ClCompile>
     <ClCompile Include="rankingmanager.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="renderer.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="result.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="scene.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="sound.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="texturemanager.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="timer.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="title.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="titleLogo.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="titlemanager.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="titlemenu.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="tutorial.cpp">
+      <Filter>ソース</Filter>
+    </ClCompile>
+    <ClCompile Include="uplift.cpp">
+      <Filter>ソース</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="camera.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="debugproc.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="input.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="light.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="main.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="manager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="object.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="object2D.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="object3D.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="objectbillboard.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="objectX.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="renderer.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="sound.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="texturemanager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="modelmanager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="character.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="motion.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="model.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="math_T.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="player.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="playermanager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="pause.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="pausemanager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="scene.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="title.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="titlelogo.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="titlemanager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="titlemenu.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="fade.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="game.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="navi.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="uplift.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="arrow.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="objectpool.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="naviUi.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッター</Filter>
     </ClInclude>
     <ClInclude Include="block.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="camera.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="character.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="debugproc.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="fade.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="input.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="item.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="light.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="manager.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="math_T.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="modelmanager.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="motion.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="navi.h">
+      <Filter>ヘッター</Filter>
     </ClInclude>
     <ClInclude Include="naviMarker.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッター</Filter>
     </ClInclude>
-    <ClInclude Include="tutorial.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="naviUi.h">
+      <Filter>ヘッター</Filter>
     </ClInclude>
     <ClInclude Include="number.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッター</Filter>
     </ClInclude>
-    <ClInclude Include="timer.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="object.h">
+      <Filter>ヘッター</Filter>
     </ClInclude>
-<<<<<<< HEAD
-    <ClInclude Include="item.h">
-=======
-    <ClInclude Include="result.h">
->>>>>>> b9884d234e9e679b8dde4650ac453e987f466e87
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="object2D.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="object3D.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="objectbillboard.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="objectpool.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="objectX.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="sound.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="pause.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="pausemanager.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="player.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="playermanager.h">
+      <Filter>ヘッター</Filter>
     </ClInclude>
     <ClInclude Include="ranking.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッター</Filter>
     </ClInclude>
     <ClInclude Include="rankingmanager.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="renderer.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="result.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="scene.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="texturemanager.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="timer.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="title.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="titlelogo.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="titlemanager.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="titlemenu.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="tutorial.h">
+      <Filter>ヘッター</Filter>
+    </ClInclude>
+    <ClInclude Include="uplift.h">
+      <Filter>ヘッター</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Team_Game.rc">
-      <Filter>リソース ファイル</Filter>
-    </ResourceCompile>
+    <ResourceCompile Include="Team_Game.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="data\ICON\Test.ico">
-      <Filter>リソース ファイル</Filter>
-    </Image>
+    <Image Include="data\ICON\Test.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="ソース">
+      <UniqueIdentifier>{326a9cdc-5bdd-444d-af37-5c0211b5a70b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッター">
+      <UniqueIdentifier>{aea9aec0-16b9-4d1e-aeca-167b362fe205}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
